feat: update to Java 22
BREAKING-CHANGE: requires Java 22